AC_INIT(libsrc/roomba.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(roombadrive, 0.1)

AM_MAINTAINER_MODE

#AM_ACLOCAL_INCLUDE(macros)

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

PKG_CHECK_EXISTS(ncurses, ncurses_pkg_config=yes, ncurses_pkg_config=no)

if test x$ncurses_pkg_config = xyes ; then
	PKG_CHECK_MODULES(NCURSES, ncurses >= 5.7.0)
else
	AC_PATH_PROG(NCURSES_CONFIG, ncurses5-config, no)
	NCURSES_LIBS=`"$NCURSES_CONFIG" --libs`
	NCURSES_CFLAGS=`"$NCURSES_CONFIG" --cflags`
fi

AC_SUBST(NCURSES_LIBS)
AC_SUBST(NCURSES_CFLAGS)


PKG_CHECK_MODULES(GLIB2, glib-2.0 >= 2.0.0 \
                        gthread-2.0 >= 2.0.0 \
                        gobject-2.0 >= 2.0.0)
AC_SUBST(GLIB2_CFLAGS)
AC_SUBST(GLIB2_LIBS)

dnl PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.12)
dnl AC_SUBST(GTK2_CFLAGS)
dnl AC_SUBST(GTK2_LIBS)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
libsrc/Makefile
daemon/Makefile
src/Makefile
])

