AC_INIT(libsrc/roomba.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(roombadrive, 0.1)

AM_MAINTAINER_MODE

#AM_ACLOCAL_INCLUDE(macros)

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

PKG_CHECK_MODULES(NCURSES, ncurses >= 5.7.0)
AC_SUBST(NCURSES_LIBS)
AC_SUBST(NCURSES_CFLAGS)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
libsrc/Makefile
src/Makefile
])

